# eidos

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: ci-arm64.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/phases/01-rendering-pipeline-and-primitives/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-animation-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/02.5-tech-debt-cleanup/: 02.5-01-PLAN.md  02.5-01-SUMMARY.md  02.5-02-PLAN.md  02.5-02-SUMMARY.md
.planning/phases/03-data-visualization/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
.planning/phases/04-gam-visualization/: 04-01-PLAN.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/: animated_scene.rs  basic_scene.rs  data_plot.rs  gam_fitting.rs  gam_plot.rs  surface_fitting.rs
src/: color.rs  error.rs  lib.rs  scene.rs  svg_gen.rs
src/animation/: easing.rs  mod.rs  tween.rs
src/dataviz/: axes.rs  camera.rs  colormap.rs  confidence_band.rs  data_curve.rs  mod.rs  scatter_plot.rs  spline.rs  spline_fit.rs  surface_plot.rs
src/primitives/: arrow.rs  bezier.rs  circle.rs  line.rs  mod.rs  rect.rs  text.rs
tests/: data_viz.rs  gam_viz.rs  integration.rs  scatter_points.rs  surface_animation.rs  surface_rendering.rs
(+21 files in other folders)
