[package]
name = "eidos"
version = "0.1.0"
edition = "2024"

[dependencies]
svg = "0.18"
resvg = "0.47"
ttf-noto-sans = "0.1"
keyframe = "1.1"
keyframe_derive = "1.0"
nalgebra = "0.34"
rayon = "1.10"

[[example]]
name = "basic_scene"
path = "examples/basic_scene.rs"

[[example]]
name = "animated_scene"
path = "examples/animated_scene.rs"

[[example]]
name = "data_plot"
path = "examples/data_plot.rs"

[[example]]
name = "gam_plot"
path = "examples/gam_plot.rs"

[[example]]
name = "gam_fitting"
path = "examples/gam_fitting.rs"

[[example]]
name = "surface_fitting"
path = "examples/surface_fitting.rs"
